<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <ListView 
        android:id="@+id/android:list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <TextView 
        android:id="@+id/android:empty"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/worldclock_list_empty"/>
	<ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        android:scaleType="fitXY"
        android:src="?android:attr/dividerHorizontal" />
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle">
        <Button android:id="@+id/btn_cancel"
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_cancel"
            style="?android:attr/buttonBarStyle" />
        <Button android:id="@+id/btn_ok"
            android:focusable="true"
            android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_ok"
            style="?android:attr/buttonBarStyle" />
    </LinearLayout>

</LinearLayout>