<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout 
        android:id="@+id/worldtime_select_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal">
        <TextView 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:gravity="left"
            android:text="@string/worldtime_select_all"
            android:textSize="18sp"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
        <CheckBox 
            android:id="@+id/worldtime_select_all_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"/>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        android:scaleType="fitXY"
        android:src="@android:drawable/divider_horizontal_dark" />
    <ListView 
        android:id="@+id/android:list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <TextView 
        android:id="@+id/android:empty"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/worldclock_list_empty"/>
	<ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        android:scaleType="fitXY"
        android:src="?android:attr/dividerHorizontal" />
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle">
        <Button android:id="@+id/clock_cancel"
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_cancel"
            style="?android:attr/buttonBarStyle" />
        <Button android:id="@+id/clock_delete"
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/btn_delete"
            style="?android:attr/buttonBarStyle" />
    </LinearLayout>
</LinearLayout>